<resources>
    <string name="app_name">CabyfiChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="_25000">$ 25000</string>
    <string name="addbutton">AddButton</string>
    <string name="tshirt">TSHIRT</string>
    <string name="gotocartbutton">GoToCartButton</string>
    <string name="voucher">VOUCHER</string>
    <string name="_150">150</string>
    <string name="_38_00">$ 38.00</string>
    <string name="you_have_a_discount_on_this_item">You have a discount on this Item!</string>
    <string name="unit_price_20">Unit Price: 20</string>
    <string name="kotlin_tshirt">Kotlin Tshirt</string>
    <string name="payment_success">Payment done successfully</string>
    <string name="total_amount">TOTAL $%1$s€</string>
    <string name="success_adding_to_cart">Product Added to Cart</string>
    <string name="deleteitembutton">deleteItemButton</string>
    <string name="x_120">X 120</string>
    <string name="product_image">product image</string>
    <string name="delete">Delete</string>
    <string name="buy_items">Buy Items</string>
    <string name="total_100">$ 100</string>
    <string name="error_adding_to_cart">Error adding product to Cart</string>

</resources>