<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginBottom="5dp"
    android:layout_weight="1"
    android:padding="3dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="45dp"
    app:layout_constraintBottom_toTopOf="@+id/itemText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/leftConstrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rightConstrain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/x_120"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tCartCode" />

            <TextView
                android:id="@+id/tCartCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/voucher"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tQuantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rightConstrain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/leftConstrain"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tName"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/kotlin_tshirt"
                android:textAlignment="center"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.042" />


            <TextView
                android:id="@+id/tSubTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:layout_marginBottom="4dp"
                android:text="@string/_38_00"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tDiscountString" />

            <TextView
                android:id="@+id/tDiscountString"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="60dp"
                android:ellipsize="none"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/you_have_a_discount_on_this_item"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tUnitPrice" />

            <TextView
                android:id="@+id/tUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:text="@string/unit_price_20"
                app:layout_constraintEnd_toEndOf="@+id/tName"
                app:layout_constraintStart_toStartOf="@+id/tName"
                app:layout_constraintTop_toBottomOf="@+id/tName" />

            <TextView
                android:id="@+id/bDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="#EC0707"
                android:singleLine="true"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tSubTotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>


